--- a/_layouts/wrap.html
+++ b/_layouts/wrap.html
@@ -39,7 +39,7 @@
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              {% for page_link in site.pages %}
+              {% for page_link in site.html_pages %}
                 {% if page.title == page_link.title %}
                 <li class="active">
                 {% else %}
