--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -109,3 +109,25 @@ th, td {
 		margin-right: 0px;
 	}
 }
+
+.zero-clipboard {
+	position: relative;
+}
+
+.btn-clipboard {
+	position: absolute;
+	top: 0px;
+	right: 0px;
+	padding: 10px;
+	margin-right:20px;
+	border: 1px solid #e1e1e8;
+	border-radius: 0 4px 0 4px;
+}
+
+.highlight {
+	max-height: 300px;
+}
+
+pre code {
+	white-space: pre;
+}
