--- a/_layouts/wrap.html
+++ b/_layouts/wrap.html
@@ -7,7 +7,7 @@
 		<meta name="description" content="{{ page.description }}">
 		<meta name="author" content="Casey Fitzpatrick">
 
-		<title>Casey Fitzpatrick - {{ page.title }}</title>
+		<title>{{ page.title }}</title>
 
 		<!-- Bootstrap core CSS -->
 		<link href="/assets/css/bootstrap.min.css" rel="stylesheet">
@@ -47,6 +47,13 @@
 					<a href="/index.html">Introduction</a>
 				</li>
 
+							{% assign active_page_is_blog = false %}
+							{% for cat in page.categories %}
+								{% if active_page_is_blog == false and cat == "blog" %}
+									{% assign active_page_is_blog = true %}
+								{% endif %}
+							{% endfor %}
+
 							{% assign active_page_is_project = false %}
 							{% for cat in page.categories %}
 								{% if active_page_is_project == false and cat == "projects" %}
@@ -54,11 +61,32 @@
 								{% endif %}
 							{% endfor %}
 
+							{% if active_page_is_blog %}
+							<li class="active dropdown">
+							{% else %}
+							<li class="dropdown">
+							{% endif %}
+
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog <span class="caret"></span></a>
+								<ul class="dropdown-menu" role="menu">
+								{% for post_link in site.categories.blog limit 10%}
+									{% if page.title == post_link.title %}
+									<li class="active">
+									{% else %}
+									<li>
+									{% endif %}
+											<a href="{{ post_link.url }}">{{ post_link.title }}</a>
+									</li>
+								{% endfor %}
+								</ul>
+							</li>
+
 							{% if active_page_is_project %}
 							<li class="active dropdown">
 							{% else %}
-							<li class="dropdown">		
+							<li class="dropdown">
 							{% endif %}
+							
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects <span class="caret"></span></a>
 								<ul class="dropdown-menu" role="menu">
 								{% for post_link in site.categories.projects %}
@@ -91,6 +119,11 @@
 				</div><!--/.container-fluid -->
 			</nav>
 			<div class="content">
+				<b>
+					{{ page.date | date: '%Y-%m-%d' }}{% if page.updated %}, updated {{ page.updated | date: '%Y-%m-%d' }}
+					{% endif %}
+				</b>
+				<br></br>
 				{{ content }}
 			</div>
 		</div> <!-- /container -->
