--- a/_layouts/wrap.html
+++ b/_layouts/wrap.html
@@ -69,7 +69,7 @@
 
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog <span class="caret"></span></a>
 								<ul class="dropdown-menu" role="menu">
-								{% for post_link in site.categories.blog limit 10%}
+								{% for post_link in site.categories.blog limit: 10 %}
 									{% if page.title == post_link.title %}
 									<li class="active">
 									{% else %}
