--- a/_layouts/wrap.html
+++ b/_layouts/wrap.html
@@ -15,6 +15,8 @@
 		<!-- Custom styling -->
 		<link href="/assets/css/css.css" rel="stylesheet">
 
+		<link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="/feed.xml">
+
 		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 		<!--[if lt IE 9]>
 			<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -113,7 +115,10 @@
 										<a href="{{ page_link.url }}">{{ page_link.title }}</a>
 								</li>
 							{% endfor %}
-							
+
+						<li>
+							<a href="/feed.xml" target="_blank"><img src="/assets/img/rss.png" style="width:20px;height:20px;border: none"></a>
+						</li>
 						</ul>
 					</div><!--/.nav-collapse -->
 				</div><!--/.container-fluid -->
