Make RSS button one line so it doesn't distort bar

--- a/_layouts/wrap.html
+++ b/_layouts/wrap.html
@@ -117,7 +117,7 @@
 							{% endfor %}
 
 						<li>
-							<a href="/feed.xml" target="_blank"><img src="/assets/img/rss.png" style="width:20px;height:20px;border: none"></a>
+							<a href="/feed.xml" target="_blank"><img src="/assets/img/rss.png" style="width:1em;height:1em;border: none"></a>
 						</li>
 						</ul>
 					</div><!--/.nav-collapse -->
